# NF0T-Logger

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-drafter.yml  stale.yml
src/: CMakeLists.txt  main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/app/settings/: SecureSettings.cpp  SecureSettings.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h
src/app/settings/pages/: CallsignLookupPage.cpp  CallsignLookupPage.h  DatabasePage.cpp  DatabasePage.h  DisplayPage.cpp  DisplayPage.h  EquipmentPage.cpp  EquipmentPage.h  QslPage.cpp  QslPage.h  RadioPage.cpp  RadioPage.h  SettingsPage.h  StationPage.cpp  StationPage.h  WsjtxPage.cpp  WsjtxPage.h
src/core/: BandPlan.cpp  BandPlan.h  Callsign.cpp  Callsign.h  Maidenhead.cpp  Maidenhead.h
src/core/adif/: AdifParser.cpp  AdifParser.h  AdifWriter.cpp  AdifWriter.h
src/core/logbook/: Qso.h  QsoFilter.h  QsoTableModel.cpp  QsoTableModel.h
src/database/: DatabaseInterface.h  MariaDbBackend.cpp  MariaDbBackend.h  SqlBackendBase.cpp  SqlBackendBase.h  SqliteBackend.cpp  SqliteBackend.h
src/lookup/: CallsignLookupProvider.h  CallsignLookupResult.h  QrzXmlLookupProvider.cpp  QrzXmlLookupProvider.h
src/qsl/: ClubLogService.cpp  ClubLogService.h  EqslService.cpp  EqslService.h  LoTwService.cpp  LoTwService.h  QrzService.cpp  QrzService.h  QslService.h
src/radio/: DigitalListenerService.h  HamlibBackend.cpp  HamlibBackend.h  RadioBackend.h  TciBackend.cpp  TciBackend.h
src/resources/: resources.qrc
src/ui/: LogFilterBar.cpp  LogFilterBar.h  QslColumns.cpp  QslColumns.h  QslDownloadDialog.cpp  QslDownloadDialog.h  QslUploadDialog.cpp  QslUploadDialog.h  QsoEditDialog.cpp  QsoEditDialog.h  QsoFullEntryDialog.cpp  QsoFullEntryDialog.h  RadioPanel.cpp  RadioPanel.h  WhatsNewDialog.cpp  WhatsNewDialog.h
src/ui/entrypanel/: QsoEntryPanel.cpp  QsoEntryPanel.h  QsoQuickEntryPanel.cpp  QsoQuickEntryPanel.h
src/wsjtx/: WsjtxService.cpp  WsjtxService.h
tools/log4om-migrate/: CMakeLists.txt  Log4OmMigrator.cpp  Log4OmMigrator.h  main.cpp
